--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -4,43 +4,63 @@
     background-size: 60%, cover;
     background-position:80% 20%,center;
     background-repeat: no-repeat;
-    >.home__header{
-        @include flexCenterSA(row);
-        padding-top:2%;
-        width: 100%;
-        height: 6vh;
-
-
-        >.header__logo{
-            color: $bright;
-            font-weight: 700;
-            font-size: 4rem;
-        }
-
-    }
 }
-.header__nav{
-    @include flexCenterSB(row);
-    padding-left:20%;
-    width: 40vw;
-}
-.nav__list{
-    @include flexCenterSB(row);
-    list-style:none;
+  
+
+.home__header{
+    @include flexCenterSA(row);
     width: 100%;
-    >.nav__element>.nav__link{
-        color:$bright;
-        text-decoration: none;
-        width: 100%;
+    height: 10vh;
+    color: $bright;
+    transition: 0.2s;
+    
+    >.header__logo{
+            
+        font-weight: 700;
+        font-size: 3.5rem;
+    }
+
+    >.header__search{
         font-size: 1.2rem;
     }
 
-}
+    >.header__nav{
+        @include flexCenterSB(row);
+        padding-left:20%;
+        width: 40vw;
+    
 
-.header__search{
-    color:$bright;
-    font-size: 1.2rem;
-}
+    >.nav__list{
+        @include flexCenterSB(row);
+        list-style:none;
+        width: 100%;
+        >.nav__element>.nav__link{
+            color:$bright;
+            text-decoration: none;
+            width: 100%;
+            font-size: 1.2rem;
+        }}}
+    &.home__header--fixed{
+        position: fixed;
+        z-index: 100;
+        background-color: $bright;
+        filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+        color:$dark;
+        >.header__nav>.nav__list>.nav__element>.nav__link{
+            color:$dark;
+        }
+        @keyframes menuResize{
+            0%{height: 0;}
+            100%{height: 10vh;}
+        }
+    }
+    
+    
+    }
+
+
+
+
 
 .home__button{
     background-color: $bright;
