--- a/styles/_team.scss
+++ b/styles/_team.scss
@@ -1,15 +1,18 @@
 .viewSection.team{
     background-color: $secondBright;
+    @include flexCenter(column);
 }
 .team__title{
+   margin: 5vh;
     text-align: center;
     font-size: 4rem;
 }
 .team__carousel{
+    
   @include flexCenterSA(row);
    font-size: 1rem;
     width: 75vw;
-    height: 60vh;
+    height: 50vh;
     margin-left: auto;
     margin-right: auto;
     filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5))
@@ -77,18 +80,6 @@
     background-color: $dark;
     z-index: 20;
     top:80%;
-    clip-path: polygon(0 0, 75% 0%, 100% 100%, 25% 100%);
+    // clip-path: polygon(0 0, 75% 0%, 100% 100%, 25% 100%);
 }
 
-// .carouselElement__worker::after{
-//     @include flexCenter(row);
-//     content: "";
-//     position: absolute;
-//     width: 50%;
-//     height: 10%;
-//     color:$bright;
-//     background-color: $dark;
-//     z-index: 200;
-//     top:80%;
-//     clip-path: polygon(0 0, 75% 0%, 100% 100%, 25% 100%);
-// }
