--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
 }
 
-.viewSection.home > .home__header {
+.home__header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -19,18 +19,23 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 2%;
   width: 100%;
-  height: 6vh;
-}
-
-.viewSection.home > .home__header > .header__logo {
+  height: 10vh;
   color: #ffffff;
-  font-weight: 700;
-  font-size: 4rem;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
-.header__nav {
+.home__header > .header__logo {
+  font-weight: 700;
+  font-size: 3.5rem;
+}
+
+.home__header > .header__search {
+  font-size: 1.2rem;
+}
+
+.home__header > .header__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,7 +53,7 @@
   width: 40vw;
 }
 
-.nav__list {
+.home__header > .header__nav > .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -66,16 +71,42 @@
   width: 100%;
 }
 
-.nav__list > .nav__element > .nav__link {
+.home__header > .header__nav > .nav__list > .nav__element > .nav__link {
   color: #ffffff;
   text-decoration: none;
   width: 100%;
   font-size: 1.2rem;
 }
 
-.header__search {
-  color: #ffffff;
-  font-size: 1.2rem;
+.home__header.home__header--fixed {
+  position: fixed;
+  z-index: 100;
+  background-color: #ffffff;
+  -webkit-filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+          filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+  color: #171717;
+}
+
+.home__header.home__header--fixed > .header__nav > .nav__list > .nav__element > .nav__link {
+  color: #171717;
+}
+
+@-webkit-keyframes menuResize {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 10vh;
+  }
+}
+
+@keyframes menuResize {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 10vh;
+  }
 }
 
 .home__button {
@@ -196,6 +227,7 @@
 }
 
 .services__title {
+  margin-top: 10vh;
   font-size: 4rem;
   text-align: center;
   color: #171717;
@@ -384,9 +416,23 @@
 
 .viewSection.team {
   background-color: #f5f5f5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .team__title {
+  margin: 5vh;
   text-align: center;
   font-size: 4rem;
 }
@@ -406,7 +452,7 @@
           align-items: center;
   font-size: 1rem;
   width: 75vw;
-  height: 60vh;
+  height: 50vh;
   margin-left: auto;
   margin-right: auto;
   -webkit-filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
@@ -497,8 +543,6 @@
   background-color: #171717;
   z-index: 20;
   top: 80%;
-  -webkit-clip-path: polygon(0 0, 75% 0%, 100% 100%, 25% 100%);
-          clip-path: polygon(0 0, 75% 0%, 100% 100%, 25% 100%);
 }
 
 * {
