--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
   background-size: 60%, cover;
   background-position: 80% 20%,center;
   background-repeat: no-repeat;
+  background-attachment: fixed, fixed;
 }
 
 .home__header {
@@ -24,6 +25,7 @@
   color: #ffffff;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+  background-color: transparent;
 }
 
 .home__header > .header__logo {
@@ -543,6 +545,238 @@
   background-color: #171717;
   z-index: 20;
   top: 80%;
+}
+
+.viewSection.clients {
+  position: relative;
+  overflow: hidden;
+}
+
+.viewSection.clients > .clientsCotent__title {
+  margin-top: 15vh;
+  text-align: center;
+  font-size: 3rem;
+  color: #171717;
+}
+
+.viewSection.clients > .clientsCotent {
+  margin-top: 2vh;
+  width: 80vw;
+  height: 60vh;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+          filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__picture {
+  width: 400px;
+  height: 400px;
+  -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+          clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__picture > .picture__image {
+  position: relative;
+  width: 90%;
+  height: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+          clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  -webkit-filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+          filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__picture > .picture__image > .imageSlider {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 300%;
+  height: 100%;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__picture > .picture__image > .imageSlider > .image__singleImage {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__picture > .picture__image > .imageSlider > .image__singleImage:nth-of-type(1) {
+  background-image: url("../images/client1.png");
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__picture > .picture__image > .imageSlider > .image__singleImage:nth-of-type(2) {
+  background-image: url("../images/worker1.png");
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__picture > .picture__image > .imageSlider > .image__singleImage:nth-of-type(3) {
+  background-image: url("../images/worker2.png");
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text {
+  width: 60%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .text__reviev {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .text__reviev > .reviev__decoration {
+  font-size: 10rem;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .reviev__name {
+  font-weight: 700;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
+  margin-left: 10%;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 25vw;
+  height: 150px;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider > .thumbnailSlider__element {
+  width: 100px;
+  height: 100px;
+  background-position: center center;
+  background-size: cover;
+  -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+          clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider > .thumbnailSlider__element:nth-of-type(1) {
+  background-image: url("../images/client1.png");
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider > .thumbnailSlider__element:nth-of-type(2) {
+  background-image: url("../images/worker1.png");
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider > .thumbnailSlider__element:nth-of-type(3) {
+  background-image: url("../images/worker2.png");
+}
+
+.viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider > .thumbnailSlider__element.thumbnailSlider__element--active {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.clients__decorationLeft {
+  position: absolute;
+  width: 100vh;
+  height: 100vh;
+  background-color: #bc2e3a;
+  left: -50vh;
+  top: 500vh;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+}
+
+.clients__decorationTop {
+  width: 50vh;
+  height: 50vh;
+  background-color: #171717;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: -25%;
+  left: 90%;
+  z-index: 0;
+}
+
+.viewSection.contact {
+  background-image: url("../images/contactSectionBackground.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: contain contain;
+  background-attachment: fixed;
+}
+
+.viewSection.contact > .contact__container {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 * {
