--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,8 @@
 @import "./services";
 @import "./process";
 @import "./team";
+@import "./clients";
+@import "./contact";
 *{
     margin:0;
     padding: 0;
