--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -35,18 +35,30 @@
     margin-right: auto;
     
     >.singleService{
+        @include flexCenter(row);
+        align-self: baseline;
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content:space-between;
+        >.singleService__description{
+            width: 80%;
+        }
     }
 }
 .singleService__image{
+    @include flexCenter(row);
+    align-self: baseline;
     background-color: $contrast;
     width: 50px;
     height: 50px;
     border-radius:100%;
     margin-right: 2%;
+    color: $bright;
+    >i{
+        font-size: 2rem;
+    }
+    
 }
 .singleService__title{
     font-size: 2rem;
