mobile view stage 1

--- a/styles/_aboutUs.scss
+++ b/styles/_aboutUs.scss
@@ -16,7 +16,9 @@
     top:-75%;
     left:40%;
     z-index: 1;
-    
+    @media (max-width:1024px){
+        display: none;
+    }
 }
 .aboutUs__article{
     
