--- a/styles/_clients.scss
+++ b/styles/_clients.scss
@@ -114,6 +114,9 @@
     transform: rotate(45deg);
     transform-origin: center center;
     z-index: 9;
+    @media (max-width:1024px){
+        display: none;
+    }
 }
 .clients__decorationTop{
     width: 50vh;
@@ -124,6 +127,9 @@
     top:-25%;
     left:90%;
     z-index: 0;
+    @media (max-width:1024px){
+        display: none;
+    }
 
     
 }
