--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -62,4 +62,7 @@
   transform: rotate(45deg);
   transform-origin: center center;
   z-index: 100;
+  @media (max-width:1024px){
+    display: none;
+}
 }
