--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -5,12 +5,19 @@
     background-position:80% 20%,center;
     background-repeat: no-repeat;
     background-attachment: fixed, fixed;
+    overflow: hidden;
+    @media (max-width:1024px){
+        background-position:90% 50%,0% 50%;
+        background-size: 0%, cover ;
+    }
 }
 
   
 
 .home__header{
     @include flexCenterSA(row);
+    position: absolute;
+    z-index: 100;
     width: 100%;
     height: 10vh;
     color: $bright;
@@ -43,6 +50,9 @@
             font-size: 1.2rem;
         }}}
     &.home__header--fixed{
+        -webkit-backface-visibility: hidden;
+        top:0;
+        left:0;
         position: fixed;
         z-index: 100;
         background-color: $bright;
@@ -77,4 +87,5 @@
     top:80%
 
 }
+
 
