--- a/styles/_process.scss
+++ b/styles/_process.scss
@@ -1,10 +1,11 @@
 .viewSection.process{
     background-color: $bright;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .prcess__decorationTop{
+    
     position: absolute;
     width: 100vh;
     height: 100vh;
@@ -13,6 +14,9 @@
     top:300vh;
     transform: rotate(45deg);
     transform-origin: center center;
+    @media (max-width:1024px){
+        display: none;
+    }
 }
 .prcess__decorationLeft{
     position: absolute;
@@ -23,6 +27,9 @@
     top:350vh;
     transform: rotate(45deg);
     transform-origin: center center;
+    @media (max-width:1024px){
+        display: none;
+    }
 }
 
 .process__title{
