--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -13,6 +13,9 @@
     height: 100vh;
     transform: rotate(45deg);
     left:-100vh;
+    @media (max-width:1024px){
+        display: none;
+    }
 
 }
 
