--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,9 +15,16 @@
 }
 body{
     overflow-x: hidden;
+    width: 100%;
 }
 
 .viewSection{
     width: 100%;
     height: 100vh;
+}
+
+@media (max-width:1024px){
+    height: 100%;
+
+    
 }
