--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -1,15 +1,26 @@
 .viewSection.home{
     position: relative;
-    background-image:url("../images/model.png"), url("../images/background.png");
-    background-size: 60%, cover;
-    background-position:80% 20%,center;
-    background-repeat: no-repeat;
-    background-attachment: fixed, fixed;
+    
+    background-image: url("../images/background.png") ;
+    background-size:cover, cover;
+    background-position:center,center;
+    background-repeat: no-repeat,no-repeat;
+    background-attachment:fixed,fixed;
     overflow: hidden;
-    @media (max-width:1024px){
-        background-position:90% 50%,0% 50%;
-        background-size: 0%, cover ;
-    }
+    // &::after{
+    //     content:"";
+    //     position: absolute;
+    //     background-color: rgba(255,0,0,0.5);
+    //     top:0;
+    //     left:0;
+    //     width: 100%;
+    //     height: 100%;
+    //     z-index: 1;
+    // }
+    // @media (max-width:1024px){
+    //     background-position:90% 50%,0% 50%;
+    //     background-size: 0%, cover ;
+    // }
 }
 
   
@@ -70,7 +81,51 @@
     
     }
 
+.homeCourtain{
+   position: relative;
+   
+  
+}
+.home__title{
+   position: absolute;
+   top:50%;
+   left:30%;
+   transform: translate(-50%,-50%);
+   
+   z-index: 5;
+   color:#fff;
+   mix-blend-mode:darken;
+   width: 150%;
+   height: 100%;
+   background-color: rgba(255,0,0,0.9);
+   @include flexCenter(column);
+   >p{
+    font-size: 12rem;
+    line-height: 85%;
+   }
+   @media (max-width:1024px){
+        width: 150%;
+        left:45%;
+        top:25%;
+        height: 250%;
+        >p{
+            font-size: 5rem
+        }
 
+    }
+}
+.home__model{
+    position: absolute;
+    width: 60%;
+    z-index: 10;
+    left:40%;
+    @media (max-width:1024px){
+        width: 150%;
+        left:0%;
+        top:20%;
+     
+}
+}
 
 
 
@@ -84,8 +139,8 @@
     border-radius:20px;
     position: absolute;
     left:30%;
-    top:80%
-
+    top:80%;
+    
 }
 
 
