--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,11 @@
 .viewSection.home {
   position: relative;
-  background-image: url("../images/model.png"), url("../images/background.png");
-  background-size: 60%, cover;
-  background-position: 80% 20%,center;
-  background-repeat: no-repeat;
-  background-attachment: fixed, fixed;
+  background-image: url("../images/background.png");
+  background-size: cover, cover;
+  background-position: center,center;
+  background-repeat: no-repeat,no-repeat;
+  background-attachment: fixed,fixed;
   overflow: hidden;
-}
-
-@media (max-width: 1024px) {
-  .viewSection.home {
-    background-position: 90% 50%,0% 50%;
-    background-size: 0%, cover;
-  }
 }
 
 .home__header {
@@ -121,6 +114,69 @@
   }
   100% {
     height: 10vh;
+  }
+}
+
+.homeCourtain {
+  position: relative;
+}
+
+.home__title {
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 5;
+  color: #fff;
+  mix-blend-mode: darken;
+  width: 150%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.9);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home__title > p {
+  font-size: 12rem;
+  line-height: 85%;
+}
+
+@media (max-width: 1024px) {
+  .home__title {
+    width: 150%;
+    left: 45%;
+    top: 25%;
+    height: 250%;
+  }
+  .home__title > p {
+    font-size: 5rem;
+  }
+}
+
+.home__model {
+  position: absolute;
+  width: 60%;
+  z-index: 10;
+  left: 40%;
+}
+
+@media (max-width: 1024px) {
+  .home__model {
+    width: 150%;
+    left: 0%;
+    top: 20%;
   }
 }
 
