--- a/styles/style.css
+++ b/styles/style.css
@@ -8,115 +8,6 @@
   overflow: hidden;
 }
 
-.home__header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  z-index: 100;
-  width: 100%;
-  height: 10vh;
-  color: #ffffff;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  background-color: transparent;
-}
-
-.home__header > .header__logo {
-  font-weight: 700;
-  font-size: 3.5rem;
-}
-
-.home__header > .header__search {
-  font-size: 1.2rem;
-}
-
-.home__header > .header__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-left: 20%;
-  width: 40vw;
-}
-
-.home__header > .header__nav > .nav__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  list-style: none;
-  width: 100%;
-}
-
-.home__header > .header__nav > .nav__list > .nav__element > .nav__link {
-  color: #ffffff;
-  text-decoration: none;
-  width: 100%;
-  font-size: 1.2rem;
-}
-
-.home__header.home__header--fixed {
-  -webkit-backface-visibility: hidden;
-  top: 0;
-  left: 0;
-  position: fixed;
-  z-index: 100;
-  background-color: #ffffff;
-  -webkit-filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
-          filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
-  color: #171717;
-}
-
-.home__header.home__header--fixed > .header__nav > .nav__list > .nav__element > .nav__link {
-  color: #171717;
-}
-
-@-webkit-keyframes menuResize {
-  0% {
-    height: 0;
-  }
-  100% {
-    height: 10vh;
-  }
-}
-
-@keyframes menuResize {
-  0% {
-    height: 0;
-  }
-  100% {
-    height: 10vh;
-  }
-}
-
 .homeCourtain {
   position: relative;
 }
@@ -1035,6 +926,234 @@
 @media (max-width: 1024px) {
   .contact__decorationBottom {
     display: none;
+  }
+}
+
+.main__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  height: 10vh;
+  color: #ffffff;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  background-color: transparent;
+}
+
+.main__header > .main__logo {
+  font-weight: 700;
+  font-size: 3.5rem;
+}
+
+.main__header > .main__search {
+  font-size: 1.2rem;
+}
+
+.main__header > .main__menuSwich {
+  position: relative;
+  width: 6vh;
+  height: 5vh;
+  display: none;
+}
+
+.main__header > .main__menuSwich.main__menuSwich > .bar {
+  position: absolute;
+  width: 100%;
+  height: 25%;
+  background-color: #F8F8F2;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-radius: 12px;
+}
+
+.main__header > .main__menuSwich.main__menuSwich > .bar:nth-of-type(1) {
+  top: 10%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.main__header > .main__menuSwich.main__menuSwich > .bar:nth-of-type(2) {
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+}
+
+.main__header > .main__menuSwich.main__menuSwich > .bar:nth-of-type(3) {
+  top: 90%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.main__header > .main__menuSwich.on > .bar:nth-of-type(1) {
+  top: 50%;
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(-45deg);
+}
+
+.main__header > .main__menuSwich.on > .bar:nth-of-type(2) {
+  -webkit-transform: translateY(-50%) scale(0);
+          transform: translateY(-50%) scale(0);
+}
+
+.main__header > .main__menuSwich.on > .bar:nth-of-type(3) {
+  top: 50%;
+  -webkit-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg);
+}
+
+.main__header > .main__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50vw;
+  height: 10vh;
+}
+
+.main__header > .main__nav > .nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  width: 100%;
+  height: 10vh;
+}
+
+.main__header > .main__nav > .nav__list > .nav__element {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  height: 10vh;
+}
+
+.main__header > .main__nav > .nav__list > .nav__element > .nav__link {
+  color: #ffffff;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  width: 100%;
+  height: 100%;
+  font-size: 1.2rem;
+}
+
+.main__header.main__header--fixed {
+  -webkit-backface-visibility: hidden;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 100;
+  background-color: #ffffff;
+  -webkit-filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+          filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+  color: #171717;
+}
+
+.main__header.main__header--fixed > .main__nav > .nav__list > .nav__element > .nav__link {
+  color: #171717;
+}
+
+@-webkit-keyframes menuResize {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 10vh;
+  }
+}
+
+@keyframes menuResize {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 10vh;
+  }
+}
+
+.main__header.main__header--fixed > .main__menuSwich > .bar {
+  background-color: #171717;
+}
+
+@media (max-width: 1024px) {
+  .main__header > .main__search {
+    display: none;
+  }
+  .main__header > .main__menuSwich {
+    display: block;
+  }
+  .main__header > .main__nav {
+    position: absolute;
+    top: 10vh;
+    right: 0;
+    height: 70vh;
+    width: 30vw;
+    background-color: #ffffff;
+    color: #171717;
+    -webkit-transition: 1s;
+    transition: 1s;
+  }
+  .main__header > .main__nav > .nav__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .main__header > .main__nav.off {
+    right: -30vw;
+  }
+  .main__header > .main__nav > .nav__list > .nav__element > .nav__link {
+    color: #171717;
+    width: 30vw;
   }
 }
 
