--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -127,8 +127,7 @@
                 justify-content: space-around;
             }
             &.off{
-                right:-30vw;
-            }
+                right:-30vw;}
             }
         
         }
