--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -1,6 +1,5 @@
 .viewSection.home{
     position: relative;
-    
     background-image: url("../images/background.png") ;
     background-size:cover, cover;
     background-position:center,center;
@@ -10,21 +9,13 @@
  
 }
 
-  
 
-
-
-.homeCourtain{
-   position: relative;
-   
-  
-}
 .home__title{
    position: absolute;
    top:50%;
    left:30%;
    transform: translate(-50%,-50%);
-   
+   text-shadow: 0px 0px 5px #ffffff;
    z-index: 5;
    color:#fff;
    mix-blend-mode:darken;
@@ -42,10 +33,8 @@
         top:25%;
         height: 250%;
         >p{
-            font-size: 5rem
+            font-size: 5rem}
         }
-
-    }
 }
 .home__model{
     position: absolute;
@@ -55,9 +44,7 @@
     @media (max-width:1024px){
         width: 150%;
         left:0%;
-        top:20%;
-     
-}
+        top:20%;}
 }
 
 
