--- a/styles/style.css
+++ b/styles/style.css
@@ -8,16 +8,13 @@
   overflow: hidden;
 }
 
-.homeCourtain {
-  position: relative;
-}
-
 .home__title {
   position: absolute;
   top: 50%;
   left: 30%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  text-shadow: 0px 0px 5px #ffffff;
   z-index: 5;
   color: #fff;
   mix-blend-mode: darken;
@@ -102,6 +99,17 @@
           align-items: center;
 }
 
+@media (max-width: 1024px) {
+  .viewSection.aboutUs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #171717;
+    color: #ffffff;
+  }
+}
+
 .aboutUs__decorationTop {
   width: 150vh;
   height: 150vh;
@@ -136,10 +144,24 @@
           align-items: flex-start;
   width: 25vw;
   height: 50vh;
+  text-align: justify;
 }
 
 .aboutUs__article > .article__title {
   font-size: 4rem;
+}
+
+@media (max-width: 1024px) {
+  .aboutUs__article {
+    width: 95vw;
+  }
+  .aboutUs__article > .article__title {
+    font-size: 4rem;
+    color: #ffffff;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 .aboutUs__laptop {
@@ -157,6 +179,15 @@
           transform: translate(-50%, -50%);
 }
 
+@media (max-width: 1024px) {
+  .aboutUs__laptop {
+    width: 100%;
+  }
+  .aboutUs__laptop > img {
+    width: 120%;
+  }
+}
+
 .article__button {
   color: #ffffff;
   background-color: #bc2e3a;
@@ -164,6 +195,14 @@
   height: 40px;
   border-radius: 20px;
   border: none;
+}
+
+@media (max-width: 1024px) {
+  .article__button {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 .viewSection.services {
@@ -182,6 +221,12 @@
   position: relative;
   overflow: hidden;
   background-color: #f5f5f5;
+}
+
+@media (max-width: 1024px) {
+  .viewSection.services {
+    height: 300vh;
+  }
 }
 
 .services__decoration {
@@ -207,6 +252,12 @@
   color: #171717;
 }
 
+@media (max-width: 1024px) {
+  .services__title {
+    margin-top: 15vh;
+  }
+}
+
 .services__container {
   display: -ms-grid;
   display: grid;
@@ -220,6 +271,17 @@
   height: 70%;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (max-width: 1024px) {
+  .services__container {
+    width: 95vw;
+    height: 90%;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
 
 .services__container > .singleService {
@@ -250,6 +312,18 @@
   width: 80%;
 }
 
+@media (max-width: 1024px) {
+  .services__container > .singleService {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .singleService__image {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -276,6 +350,14 @@
 
 .singleService__image > i {
   font-size: 2rem;
+}
+
+@media (max-width: 1024px) {
+  .singleService__image {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 .singleService__title {
@@ -327,6 +409,7 @@
 }
 
 .process__title {
+  margin-top: 15vh;
   font-size: 3rem;
   text-align: left;
 }
@@ -371,7 +454,7 @@
 }
 
 .process__images {
-  width: 100%;
+  width: 50%;
   height: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -386,6 +469,15 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (max-width: 1024px) {
+  .process__images {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .singleImage {
@@ -478,8 +570,8 @@
 
 .carousel__Element {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 15vw;
+  height: 15vw;
   -webkit-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.75);
           box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.75);
   -webkit-transform: rotate(-45deg);
@@ -595,6 +687,35 @@
 .carousel__button.carouselElement__button--prev {
   -webkit-clip-path: polygon(0 50%, 100% 100%, 100% 0);
           clip-path: polygon(0 50%, 100% 100%, 100% 0);
+}
+
+@media (max-width: 1024px) {
+  .team__title {
+    margin-top: 10vh;
+  }
+  .team__carousel {
+    height: 80vh;
+  }
+  .carousel__Element {
+    width: 30vw;
+    height: 30vw;
+  }
+  .carousel__Element.center {
+    -webkit-transform: perspective(900px) translate3d(-35%, -100%, 300px) rotate(-45deg);
+            transform: perspective(900px) translate3d(-35%, -100%, 300px) rotate(-45deg);
+  }
+  .carousel__Element.right {
+    -webkit-transform: perspective(1000px) translate3d(50%, -50%, 0px) rotate(-45deg);
+            transform: perspective(1000px) translate3d(50%, -50%, 0px) rotate(-45deg);
+  }
+  .carousel__Element.left {
+    -webkit-transform: perspective(1000px) translate3d(-150%, -50%, 0px) rotate(-45deg);
+            transform: perspective(1000px) translate3d(-150%, -50%, 0px) rotate(-45deg);
+  }
+  .carousel__button {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
 }
 
 .viewSection.clients {
