--- a/styles/_aboutUs.scss
+++ b/styles/_aboutUs.scss
@@ -4,9 +4,7 @@
     background-color: $bright;
     @include flexCenterSA(row);
     @media (max-width:1024px){
-        flex-direction: column;
-        background-color: $dark;
-        color:$bright;
+        
         }
     
 }
@@ -20,9 +18,7 @@
     top:-75%;
     left:40%;
     z-index: 1;
-    @media (max-width:1024px){
-        display: none;
-    }
+ 
 }
 .aboutUs__article{
     
@@ -36,18 +32,12 @@
     >.article__title{
         font-size: 4rem;
     }
-    @media (max-width:1024px){
-        width: 95vw;
-        >.article__title{
-            font-size: 4rem;
-            color:$bright;
-            align-self: center;
-        }
+    
+    }
+  
         
 
 
-    }
-}
 
 .aboutUs__laptop{
     width:30vw;
@@ -62,17 +52,15 @@
         transform: translate(-50%,-50%)
 
     }
-    @media (max-width:1024px){
-        width: 100%;
+    @media (max-width:992px){
         >img{
-            width: 120%;
+            left:70%;
         }
-
     }
+   
 }
+
 .article__button{
     @include readMoreButton;
-    @media (max-width:1024px){
-        align-self: center;
-    }
+    
 }
