--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -15,7 +15,7 @@
       height: 100vh;
       background-color: rgba(0, 0, 0,0.9);
     >.contact__title{
-        
+        margin-top:10vh;
         text-align: center;
         font-size: 3rem;
         color:$medium;
