--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -13,9 +13,9 @@
 .home__title{
    position: absolute;
    top:50%;
-   left:30%;
+   left:45%;
    transform: translate(-50%,-50%);
-   text-shadow: 0px 0px 5px #ffffff;
+   text-shadow: 10px 10px 20px rgba(0,0,0,0.75);
    z-index: 5;
    color:#fff;
    mix-blend-mode:darken;
@@ -25,31 +25,66 @@
    @include flexCenter(column);
    >p{
     font-size: 12rem;
-    line-height: 85%;
+    line-height: 75%;
+    &:last-of-type{
+        font-size: 6rem;
+        line-height: 80%;
+    }
    }
+   
+
    @media (max-width:1024px){
         width: 150%;
-        left:45%;
+        left:50%;
         top:25%;
         height: 250%;
         >p{
             font-size: 5rem}
         }
+    @media (max-width:768px){
+        >p{
+            font-size: 5rem;
+            line-height: 75%;
+            &:last-of-type{
+                font-size: 2.5rem;
+                line-height: 80%;
+            }
+           }
+    }
 }
 .home__model{
     position: absolute;
-    width: 60%;
+    width: 65%;
     z-index: 10;
-    left:40%;
+    top:0%;
+    left:50%;
+    transition:1s;
+    @media (max-width:1200px){
+        width: 80%;
+    }
     @media (max-width:1024px){
-        width: 150%;
-        left:0%;
+        width: 70%;
+        left:30%;
         top:20%;}
+    
+    
+    @media (max-width:992px){
+            width: 70%;
+            left:30%;
+            top:30%;
+        }
+    @media (max-width:768px){
+        width: 80%;
+        left:10%;
+    }
+
+
 }
 
 
 
 .home__button{
+    
     background-color: $bright;
     color:$dark;
     font-weight: 700;
@@ -59,8 +94,8 @@
     border-radius:20px;
     position: absolute;
     left:30%;
-    top:80%;
-    
+    top:85%;
+    z-index: 10;
 }
 
 
