--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,7 +10,7 @@
 *{
     margin:0;
     padding: 0;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 2vh;
     scroll-behavior: smooth;
 }
