--- a/styles/style.css
+++ b/styles/style.css
@@ -635,11 +635,11 @@
 
 .carousel__Element > .workerLabel {
   position: absolute;
-  width: 75%;
+  width: 90%;
   height: 15%;
   background-color: #171717;
-  -webkit-clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
-          clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
+  -webkit-clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
+          clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
   font-size: 1.2rem;
   color: #ffffff;
   display: -webkit-box;
@@ -657,23 +657,22 @@
           align-items: center;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
-  top: 85%;
-  left: -25%;
+  top: 80%;
+  left: -35%;
 }
 
 .carousel__Element > .functionLabel {
-  -webkit-clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
-          clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
+  -webkit-clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
+          clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
   position: absolute;
   -webkit-transform: rotate(45deg) scale(0);
           transform: rotate(45deg) scale(0);
-  width: 50%;
-  height: 10%;
+  width: 0%;
+  height: 0%;
   color: #ffffff;
-  -webkit-transition: scale 3s;
-  transition: scale 3s;
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
+  font-size: 0.7rem;
+  -webkit-transition: height 1s;
+  transition: height 1s;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -690,11 +689,13 @@
 }
 
 .carousel__Element.center > .functionLabel {
+  width: 60%;
+  height: 10%;
   background-color: #bc2e3a;
   -webkit-transform: rotate(45deg) scale(1);
           transform: rotate(45deg) scale(1);
-  top: 100%;
-  left: -15%;
+  top: 93%;
+  left: -25%;
 }
 
 .carousel__button {
