--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -21,7 +21,7 @@
         width: 6vh;
         height: 5vh;
         display: none;
-        
+        cursor: pointer;
         &.main__menuSwich>.bar{
             position:absolute;
             width:100%;
