--- a/styles/_aboutUs.scss
+++ b/styles/_aboutUs.scss
@@ -3,9 +3,11 @@
     overflow: hidden;
     background-color: $bright;
     @include flexCenterSA(row);
-    @media (max-width:1024px){
+    @media (max-width:768px){
+        flex-direction: column;
+        background: linear-gradient(45deg, $bright 0%, $bright 50%, $dark 50%, $dark 100%);
         
-        }
+    }
     
 }
 
@@ -18,7 +20,10 @@
     top:-75%;
     left:40%;
     z-index: 1;
- 
+    @media (max-width:768px){
+        display: none;
+        
+    }
 }
 .aboutUs__article{
     
@@ -29,9 +34,26 @@
     width:25vw;
     height:50vh;
     text-align: justify;
+    
     >.article__title{
         font-size: 4rem;
+        @media (max-width:768px){
+            align-self: center;
+            font-size: 3rem;
+        }
     }
+    @media (max-width:992px){
+        height:70vh;
+
+    }
+    @media (max-width:768px){
+        margin-top: 10vh;
+        color:$medium;
+       width: 80vw;
+       height: 40vh;
+       
+    }
+   
     
     }
   
@@ -57,10 +79,20 @@
             left:70%;
         }
     }
+    @media (max-width:768px){
+       
+        >img{
+            left: 50%;
+            width: 70vw;
+        }
+    }
    
 }
 
 .article__button{
     @include readMoreButton;
-    
+    @media (max-width:768px){
+        align-self: center;
+        // mix-blend-mode:screen;
+    }
 }
