--- a/styles/_process.scss
+++ b/styles/_process.scss
@@ -2,19 +2,24 @@
     background-color: $bright;
     position: relative;
     overflow-x: hidden;
+    @media (max-width:768px){
+        flex-direction: column;
+        background: linear-gradient(45deg, $bright 0%, $bright 50%, $dark 50%, $dark 100%);
+        
+    }
 }
 
 .prcess__decorationTop{
     
     position: absolute;
     width: 100vh;
-    height: 100vh;
+    
     background-color: $contrast;
     right:-50vh;
     top:300vh;
     transform: rotate(45deg);
     transform-origin: center center;
-    @media (max-width:1024px){
+    @media (max-width:1200px){
         display: none;
     }
 }
@@ -27,43 +32,69 @@
     top:350vh;
     transform: rotate(45deg);
     transform-origin: center center;
-    @media (max-width:1024px){
+    @media (max-width:1200px){
         display: none;
     }
 }
 
 .process__title{
-    margin-top: 15vh;
+    margin-top: 10vh;
     font-size: 3rem;
     text-align: left;
-   
+    @media (max-width:1200px){
+        color:$medium;
+    }
 }
 
 .process__container{
     position: absolute;
     width: 90vw;
+    height: 80%;
     margin-top: 5%;
     margin-left: 15vw;
-    height: 90vh;
     z-index: 10;
-
-
     @include flexCenterSB(row);
     >.process__article{
-        @include flexCenterSB(column);
+        @include flexCenterSA(column);
         width: 30%;
+        height: 100%;
+        >.process__title{
+            align-self: flex-start;
+        }
     }
-    @media (max-width:1024px){
-       
+    @media (max-width:1200px){
+        color:$medium;
+    }
     
+    @media (max-width:992px){
+        height:90%;
+        width: 100vw;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        >.process__article{
+            
+            width: 90%;
+            text-align: justify;
+            >.process__title{
+                align-self: center;
+            }
+            
+        }
     }
+    
 }
 .process__images{
-    width: 50%;
-    height: 60%;
+    width: 100%;
+    height: 100%;
     @include flexCenterSB(row);
-    @media (max-width:1024px){
-        flex-direction: column;
+    @media (max-width:1200px){
+        width: 60%;
+     }
+     @media (max-width:992px){
+        width: 100%;
      }
 }
 .singleImage{
@@ -97,7 +128,11 @@
         left: 10%;
         bottom:0;
         font-size: 3rem;
+        @media (max-width:1024px){
+            font-size: 1.5rem;
+        }
     }
+
 }
 .process__button{
     @include readMoreButton;
