--- a/styles/style.css
+++ b/styles/style.css
@@ -75,8 +75,6 @@
   z-index: 10;
   top: 0%;
   left: 50%;
-  -webkit-transition: 1s;
-  transition: 1s;
 }
 
 @media (max-width: 1200px) {
@@ -103,7 +101,7 @@
 
 @media (max-width: 768px) {
   .home__model {
-    width: 80%;
+    width: 90%;
     left: 10%;
   }
 }
@@ -140,6 +138,16 @@
           align-items: center;
 }
 
+@media (max-width: 768px) {
+  .viewSection.aboutUs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background: linear-gradient(45deg, #ffffff 0%, #ffffff 50%, #171717 50%, #171717 100%);
+  }
+}
+
 .aboutUs__decorationTop {
   width: 150vh;
   height: 150vh;
@@ -150,6 +158,12 @@
   top: -75%;
   left: 40%;
   z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .aboutUs__decorationTop {
+    display: none;
+  }
 }
 
 .aboutUs__article {
@@ -175,6 +189,30 @@
   font-size: 4rem;
 }
 
+@media (max-width: 768px) {
+  .aboutUs__article > .article__title {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .aboutUs__article {
+    height: 70vh;
+  }
+}
+
+@media (max-width: 768px) {
+  .aboutUs__article {
+    margin-top: 10vh;
+    color: #6f6f6e;
+    width: 80vw;
+    height: 40vh;
+  }
+}
+
 .aboutUs__laptop {
   width: 30vw;
   height: 30vw;
@@ -196,6 +234,13 @@
   }
 }
 
+@media (max-width: 768px) {
+  .aboutUs__laptop > img {
+    left: 50%;
+    width: 70vw;
+  }
+}
+
 .article__button {
   color: #ffffff;
   background-color: #bc2e3a;
@@ -205,27 +250,30 @@
   border: none;
 }
 
+@media (max-width: 768px) {
+  .article__button {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
 .viewSection.services {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   position: relative;
   overflow: hidden;
   background-color: #f5f5f5;
+  min-height: 100vh;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .viewSection.services {
-    height: 300vh;
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .viewSection.services {
+    background: linear-gradient(135deg, #ffffff 0%, #ffffff 50%, #bc2e3a 50%, #bc2e3a 100%);
   }
 }
 
@@ -239,22 +287,22 @@
   left: -100vh;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .services__decoration {
     display: none;
   }
 }
 
 .services__title {
-  margin-top: 10vh;
+  margin-top: 15vh;
   font-size: 4rem;
   text-align: center;
   color: #171717;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .services__title {
-    margin-top: 15vh;
+    color: #171717;
   }
 }
 
@@ -268,19 +316,29 @@
   grid-column-gap: 10px;
   grid-row-gap: 15px;
   width: 70vw;
-  height: 70%;
+  margin-top: 5vh;
   margin-left: auto;
   margin-right: auto;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
+  .services__container {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+}
+
+@media (max-width: 768px) {
   .services__container {
     width: 95vw;
-    height: 90%;
+    margin-bottom: 5vh;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    color: #171717;
   }
 }
 
@@ -360,6 +418,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .singleService__image {
+    border: 1px solid #ffffff;
+  }
+}
+
 .singleService__title {
   font-size: 2rem;
 }
@@ -370,10 +434,19 @@
   overflow-x: hidden;
 }
 
+@media (max-width: 768px) {
+  .viewSection.process {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background: linear-gradient(45deg, #ffffff 0%, #ffffff 50%, #171717 50%, #171717 100%);
+  }
+}
+
 .prcess__decorationTop {
   position: absolute;
   width: 100vh;
-  height: 100vh;
   background-color: #bc2e3a;
   right: -50vh;
   top: 300vh;
@@ -383,7 +456,7 @@
           transform-origin: center center;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .prcess__decorationTop {
     display: none;
   }
@@ -402,24 +475,30 @@
           transform-origin: center center;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .prcess__decorationLeft {
     display: none;
   }
 }
 
 .process__title {
-  margin-top: 15vh;
+  margin-top: 10vh;
   font-size: 3rem;
   text-align: left;
+}
+
+@media (max-width: 1200px) {
+  .process__title {
+    color: #6f6f6e;
+  }
 }
 
 .process__container {
   position: absolute;
   width: 90vw;
+  height: 80%;
   margin-top: 5%;
   margin-left: 15vw;
-  height: 90vh;
   z-index: 10;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -444,18 +523,57 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   width: 30%;
+  height: 100%;
+}
+
+.process__container > .process__article > .process__title {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+@media (max-width: 1200px) {
+  .process__container {
+    color: #6f6f6e;
+  }
+}
+
+@media (max-width: 992px) {
+  .process__container {
+    height: 90%;
+    width: 100vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .process__container > .process__article {
+    width: 90%;
+    text-align: justify;
+  }
+  .process__container > .process__article > .process__title {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 .process__images {
-  width: 50%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -471,12 +589,15 @@
           align-items: center;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .process__images {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    width: 60%;
+  }
+}
+
+@media (max-width: 992px) {
+  .process__images {
+    width: 100%;
   }
 }
 
@@ -515,6 +636,12 @@
   left: 10%;
   bottom: 0;
   font-size: 3rem;
+}
+
+@media (max-width: 1024px) {
+  .singleImage > p {
+    font-size: 1.5rem;
+  }
 }
 
 .process__button {
@@ -714,16 +841,17 @@
           clip-path: polygon(0 50%, 100% 100%, 100% 0);
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .team__title {
     margin-top: 10vh;
   }
   .team__carousel {
-    height: 80vh;
+    height: 80%;
+    margin-top: 30vh;
   }
   .carousel__Element {
-    width: 30vw;
-    height: 30vw;
+    width: 25vw;
+    height: 25vw;
   }
   .carousel__Element.center {
     -webkit-transform: perspective(900px) translate3d(-35%, -100%, 300px) rotate(-45deg);
@@ -1151,6 +1279,7 @@
   width: 6vh;
   height: 5vh;
   display: none;
+  cursor: pointer;
 }
 
 .main__header > .main__menuSwich.main__menuSwich > .bar {
